2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/DebugValueWindow.cs,
	  MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Track api
	  changes.

2008-07-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/DebugValueWindow.cs: Show and hide
	  scrollbars when needed. Set the window to modal mode when the user
	  starts editing a value. In this way keyboard events will be
	  directed to this popup window instead of the editor.
	* MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs,
	  MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs: Set
	  tooltip alignment.
	* MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Implemented
	  basic expression scanner. Use the selection as debug expression if
	  there is something selected.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/DebugValueWindow.cs,
	  MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs,
	  MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs,
	  MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Initial
	  implementation of debug tooltips. It still has some window sizing
	  and editing issues.

2008-07-06  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Added
	  support for custom styles and modes.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 402202 -
	  The line number at the bottom of MD is wrong when code is folded'.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: fixed Bug 405930 -
	  FoldingRegions in compilation units are all folded by default
